# goit-pythonweb-hw-12

./: .dockerignore  .env.example  .env.test  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pytest.ini  run.sh  test.docker-compose.yml
contacts-api/: main.py
contacts-api/src/routes/: contacts.py
contacts-api/src/schemas/: mail.py  tokens.py
contacts-api/src/services/: tokens.py
contacts-api/src/utils/: hashing.py
docs/source/: conf.py  index.rst
src/: main.py  schemas.py  settings.py  utils.py
src/database/: db.py  models.py
src/database/migrations/: env.py
src/database/migrations/versions/: 51eccca94806_user_and_token_models.py  6378e2436fa0_user_role_notnullable.py  9af8dd66ea8d_user_and_token_models.py  ac0e2abb3b36_user_role_and_reset_token_type.py  c372ff05fc20_init.py
src/redis/: redis.py
src/repository/: contacts.py  tokens.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: auth.py  contacts.py  mail.py  users.py
src/services/: auth.py  contacts.py  mail.py  tokens.py  upload_file.py  users.py
src/templates/: activation-mail.html  reset-password.html  verification-mail.html
src/utils/: authenticate.py  exceptions.py  hashing.py  role_guard.py  tokens.py
tests/: conftest.py
tests/repository/: test_contacts_repository.py  test_tokens_repository.py  test_tokens_unit.py  test_users.py  test_users_repository.py  test_users_unit.py
tests/routes/: test_auth_routes.py  test_contacts_routes.py  test_users_routes.py
(+1 files in other folders)
