[tool.poetry]
name = "goit-pythonweb-hw-10"
version = "0.1.0"
description = ""
authors = ["Mykyta <nikita2001395@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
uvicorn = "^0.34.0"
pydantic = {extras = ["email"], version = "^2.10.4"}
greenlet = "^3.1.1"
pyjwt = "^2.10.1"
bcrypt = "^4.2.1"
pydantic-settings = "^2.7.1"
fastapi-mail = "^1.4.2"
slowapi = "^0.1.9"
cloudinary = "^1.42.1"
python-multipart = "^0.0.20"


[tool.poetry.group.dev.dependencies]
sphinx = "^8.1.3"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.25.2"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode=false